ci(gitops): adopt helm-first validation workflow; chore: yamllint config, make bash, ignore .out

--- a/charts/bitiq-sample-app/values-common.yaml
+++ b/charts/bitiq-sample-app/values-common.yaml
@@ -13,7 +13,13 @@ service:
 baseDomain: ""
 hostPrefix: "svc-api"
 
-resources: {}
+resources:
+  limits:
+    cpu: 250m
+    memory: 256Mi
+  requests:
+    cpu: 100m
+    memory: 128Mi
 nodeSelector: {}
 tolerations: []
 affinity: {}
