--- a/charts/image-updater/templates/deployment.yaml
+++ b/charts/image-updater/templates/deployment.yaml
@@ -16,9 +16,17 @@ spec:
         app.kubernetes.io/name: argocd-image-updater
     spec:
       serviceAccountName: argocd-image-updater
+      securityContext:
+        runAsNonRoot: true
       containers:
         - name: argocd-image-updater
-          image: quay.io/argoprojlabs/argocd-image-updater:latest
+          image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
+          imagePullPolicy: {{ .Values.image.pullPolicy }}
+          securityContext:
+            runAsNonRoot: true
+            allowPrivilegeEscalation: false
+            capabilities:
+              drop: ["ALL"]
           args:
             - --log-level={{ .Values.logLevel }}
             - --applications-namespace={{ .Values.applicationNamespaces }}
@@ -32,3 +40,5 @@ spec:
                 secretKeyRef:
                   name: argocd-image-updater-secret
                   key: argocd.token
+          resources:
+            {{- toYaml .Values.resources | nindent 12 }}
