--- a/charts/image-updater/values.yaml
+++ b/charts/image-updater/values.yaml
@@ -8,3 +8,16 @@ argocd:
   token: ""   # REQUIRED: paste a token for the Argo CD API
 
 applicationNamespaces: "*"   # watch all namespaces
+
+image:
+  repository: quay.io/argoprojlabs/argocd-image-updater
+  tag: v0.16.0
+  pullPolicy: IfNotPresent
+
+resources:
+  limits:
+    cpu: 200m
+    memory: 256Mi
+  requests:
+    cpu: 100m
+    memory: 128Mi
