--- a/charts/bitiq-sample-app/templates/deployment.yaml
+++ b/charts/bitiq-sample-app/templates/deployment.yaml
@@ -14,10 +14,17 @@ spec:
       labels:
         app.kubernetes.io/name: bitiq-sample-app
     spec:
+      securityContext:
+        runAsNonRoot: true
       containers:
         - name: app
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
+          securityContext:
+            runAsNonRoot: true
+            allowPrivilegeEscalation: false
+            capabilities:
+              drop: ["ALL"]
           ports:
             - name: http
               containerPort: {{ .Values.service.port }}
@@ -31,3 +38,5 @@ spec:
               path: /healthz
               port: http
             initialDelaySeconds: 10
+          resources:
+            {{- toYaml .Values.resources | nindent 12 }}
