--- a/charts/image-updater/templates/secret-token.yaml
+++ b/charts/image-updater/templates/secret-token.yaml
@@ -1,9 +1,10 @@
+{{- if .Values.secret.create }}
 apiVersion: v1
 kind: Secret
 metadata:
-  name: argocd-image-updater-secret
+  name: {{ .Values.secret.name }}
   namespace: {{ .Values.argoNamespace }}
 type: Opaque
 stringData:
-  # Token for Argo CD API access (required)
-  argocd.token: {{ required "Set .Values.argocd.token with an ArgoCD API token" .Values.argocd.token | quote }}
+  {{ .Values.secret.key }}: {{ required "Set .Values.argocd.token when secret.create=true" .Values.argocd.token | quote }}
+{{- end }}
