--- a/charts/image-updater/templates/deployment.yaml
+++ b/charts/image-updater/templates/deployment.yaml
@@ -38,7 +38,7 @@ spec:
             - name: ARGOCD_TOKEN
               valueFrom:
                 secretKeyRef:
-                  name: argocd-image-updater-secret
-                  key: argocd.token
+                  name: {{ .Values.secret.name }}
+                  key: {{ .Values.secret.key }}
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
