--- a/charts/image-updater/values.yaml
+++ b/charts/image-updater/values.yaml
@@ -5,7 +5,8 @@ argocd:
   server: openshift-gitops-server
   port: 443
   insecure: true
-  token: ""   # REQUIRED: paste a token for the Argo CD API
+  # When secret.create=true below, set the token here or via env/CI
+  token: ""
 
 applicationNamespaces: "*"   # watch all namespaces
 
@@ -21,3 +22,7 @@ resources:
   requests:
     cpu: 100m
     memory: 128Mi
+secret:
+  create: false
+  name: argocd-image-updater-secret
+  key: argocd.token
