ci(gitops): adopt helm-first validation (#11)
* ci(gitops): adopt helm-first validation workflow; chore: yamllint config, make bash, ignore .out

* ci(yamllint): fix bracket spacing, add document-start, quote on: in workflows

* ci(yamllint): fix workflow bracket/quotes; ensure newline at EOF across charts; trim trailing blank line

* ci(commitlint): validate PR titles; limit commitlint to main; dev: add commit-msg hook

* ci(yamllint): remove trailing blank line in semantic-pr workflow

* feat(image-updater): add secret.create/name/key and gate Secret; ci/validate: render with secret.create=false; chore: add CODEOWNERS; docs: token secret options

--- a/.github/workflows/commitlint.yml
+++ b/.github/workflows/commitlint.yml
@@ -1,8 +1,7 @@
+---
 name: commitlint
 
-on:
-  pull_request:
-    types: [opened, synchronize, edited, reopened]
+"on":
   push:
     branches: [main]
 
@@ -15,5 +14,4 @@ jobs:
           fetch-depth: 0
       - uses: wagoid/commitlint-github-action@v6
         with:
-          configFile: commitlint.config.js
-
+          configFile: commitlint.config.mjs
