--- a/charts/bitiq-sample-app/templates/deployment.yaml
+++ b/charts/bitiq-sample-app/templates/deployment.yaml
@@ -30,12 +30,12 @@ spec:
               containerPort: {{ .Values.service.port }}
           readinessProbe:
             httpGet:
-              path: /healthz
+              path: {{ .Values.healthPath | default "/healthz" }}
               port: http
             initialDelaySeconds: 5
           livenessProbe:
             httpGet:
-              path: /healthz
+              path: {{ .Values.healthPath | default "/healthz" }}
               port: http
             initialDelaySeconds: 10
           resources:
