--- a/charts/bitiq-sample-app/values-common.yaml
+++ b/charts/bitiq-sample-app/values-common.yaml
@@ -1,17 +1,19 @@
 replicaCount: 1
 
 image:
-  repository: quay.io/yourorg/bitiq-svc-api
-  tag: "0.1.0"        # Image Updater will manage this
+  repository: ghcr.io/traefik/whoami
+  tag: "v1.10.2"
   pullPolicy: IfNotPresent
 
 service:
-  port: 8080
+  port: 80
   type: ClusterIP
 
 # Will be set per-env; used to build Route host
 baseDomain: ""
 hostPrefix: "svc-api"
+
+healthPath: "/"
 
 resources:
   limits:
