feat(sample-app): use public whoami; run on 8080 via args; add healthPath; docs: update local runbook

--- a/charts/bitiq-sample-app/templates/deployment.yaml
+++ b/charts/bitiq-sample-app/templates/deployment.yaml
@@ -20,6 +20,9 @@ spec:
         - name: app
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
+          args:
+            - "--port"
+            - "{{ .Values.service.port }}"
           securityContext:
             runAsNonRoot: true
             allowPrivilegeEscalation: false
