fix(pipelines): hub resolver tasks + EventListener SA
- Replace ClusterTask refs with Tekton Hub resolver for git-clone v0.9 and buildah v0.10 to satisfy validation where ClusterTasks are absent
- Add ServiceAccount 'pipeline' + RoleBinding in openshift-pipelines for EventListener
- Gate webhook Secret creation via triggers.createSecret and add triggers.secretToken
- Align sampleAppImageRepo to internal registry for ENV=local
- Add 'make image-updater-secret' for Argo CD Image Updater token
- Docs: clarify SSO token flow and webhook setup; AGENTS notes updated

--- a/charts/ci-pipelines/templates/pipeline.yaml
+++ b/charts/ci-pipelines/templates/pipeline.yaml
@@ -28,8 +28,16 @@ spec:
   tasks:
     - name: fetch-repo
       taskRef:
-        kind: ClusterTask
-        name: git-clone
+        resolver: hub
+        params:
+          - name: catalog
+            value: tekton
+          - name: kind
+            value: task
+          - name: name
+            value: git-clone
+          - name: version
+            value: "0.9"
       params:
         - name: url
           value: $(params.git-url)
@@ -43,8 +51,16 @@ spec:
     - name: build-and-push
       runAfter: [fetch-repo]
       taskRef:
-        kind: ClusterTask
-        name: buildah
+        resolver: hub
+        params:
+          - name: catalog
+            value: tekton
+          - name: kind
+            value: task
+          - name: name
+            value: buildah
+          - name: version
+            value: "0.10"
       params:
         - name: IMAGE
           value: $(params.image)
