--- a/charts/bitiq-umbrella/values-common.yaml
+++ b/charts/bitiq-umbrella/values-common.yaml
@@ -9,4 +9,5 @@ repoUrl: https://github.com/bitiq-io/gitops.git
 targetRevision: main
 
 # Sample app image repo (Image Updater watches this)
-sampleAppImageRepo: quay.io/yourorg/bitiq-svc-api
+# For ENV=local, align to Tekton defaults (internal registry)
+sampleAppImageRepo: image-registry.openshift-image-registry.svc:5000/bitiq-ci/bitiq-svc-api
