fix(pipelines): set namespace on pipeline rolebinding subject

--- a/charts/ci-pipelines/templates/sa-pipeline.yaml
+++ b/charts/ci-pipelines/templates/sa-pipeline.yaml
@@ -12,6 +12,7 @@ metadata:
 subjects:
   - kind: ServiceAccount
     name: pipeline
+    namespace: openshift-pipelines
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
