--- a/charts/ci-pipelines/templates/pipeline.yaml
+++ b/charts/ci-pipelines/templates/pipeline.yaml
@@ -14,6 +14,9 @@ spec:
     - name: image
       type: string
       default: "{{ .Values.pipeline.imageRegistry }}/{{ .Values.pipeline.imageNamespace }}/{{ .Values.pipeline.imageName }}"
+    - name: imageTag
+      type: string
+      default: "latest"
     - name: dockerfile
       type: string
       default: {{ .Values.pipeline.dockerfile | quote }}
@@ -63,7 +66,7 @@ spec:
             value: "0.10"
       params:
         - name: IMAGE
-          value: $(params.image)
+          value: $(params.image):$(params.imageTag)
         - name: DOCKERFILE
           value: $(params.dockerfile)
         - name: CONTEXT
