fix(pipelines): hub resolver tasks + EventListener SA/RBAC; docs for local e2e secrets + webhook; helper target (#17)
* fix(pipelines): hub resolver tasks + EventListener SA

- Replace ClusterTask refs with Tekton Hub resolver for git-clone v0.9 and buildah v0.10 to satisfy validation where ClusterTasks are absent
- Add ServiceAccount 'pipeline' + RoleBinding in openshift-pipelines for EventListener
- Gate webhook Secret creation via triggers.createSecret and add triggers.secretToken
- Align sampleAppImageRepo to internal registry for ENV=local
- Add 'make image-updater-secret' for Argo CD Image Updater token
- Docs: clarify SSO token flow and webhook setup; AGENTS notes updated

* feat(pipelines): tag images by commit SHA via triggers; use hub tasks

* fix(triggers): grant pipeline SA cluster-scope access to ClusterInterceptors

* docs(local): add LOCAL-CI-CD e2e guide; link from README

* fix(pipelines): default webhook image tags

--- a/charts/ci-pipelines/templates/triggers.yaml
+++ b/charts/ci-pipelines/templates/triggers.yaml
@@ -20,6 +20,8 @@ spec:
   params:
     - name: git-repo-url
     - name: git-revision
+    - name: image-tag
+      default: latest
   resourcetemplates:
     - apiVersion: tekton.dev/v1
       kind: PipelineRun
@@ -34,6 +36,8 @@ spec:
             value: $(tt.params.git-repo-url)
           - name: git-revision
             value: $(tt.params.git-revision)
+          - name: imageTag
+            value: $(tt.params.image-tag)
         workspaces:
           - name: shared-workspace
             volumeClaimTemplate:
@@ -55,6 +59,8 @@ spec:
       value: $(body.repository.clone_url)
     - name: git-revision
       value: $(body.ref)
+    - name: image-tag
+      value: $(extensions.image_tag)
 
 ---
 apiVersion: triggers.tekton.dev/v1beta1
@@ -76,6 +82,25 @@ spec:
                 secretKey: secretToken
             - name: eventTypes
               value: ["push","pull_request"]
+        - ref:
+            name: "cel"
+          params:
+            - name: overlays
+              value:
+                - key: extensions.image_tag
+                  expression: >-
+                    (
+                      'after' in body && body.after != '' ?
+                      body.after :
+                      (
+                        'pull_request' in body &&
+                        'head' in body.pull_request &&
+                        'sha' in body.pull_request.head &&
+                        body.pull_request.head.sha != '' ?
+                        body.pull_request.head.sha :
+                        'latest'
+                      )
+                    )
       bindings:
         - ref: {{ .Values.pipeline.name }}-binding
       template:
