--- a/charts/ci-pipelines/values.yaml
+++ b/charts/ci-pipelines/values.yaml
@@ -12,7 +12,7 @@ pipeline:
 
   # Source repository to build (set this to YOUR repo)
   # Example: https://github.com/yourorg/your-service.git
-  gitUrl: https://github.com/bitiq-io/bitiq-svc-api.git
+  gitUrl: https://github.com/paulcapestany/toy-service.git
   gitRevision: main
 
   # Build context
@@ -20,10 +20,10 @@ pipeline:
   contextDir: .
 
   # Image destination (in-cluster registry is preferred for CRC)
-  imageRegistry: image-registry.openshift-image-registry.svc:5000
-  imageNamespace: bitiq-ci
-  imageName: bitiq-svc-api
-  tlsVerify: "false"   # often false for in-cluster pushes
+  imageRegistry: quay.io
+  imageNamespace: paulcapestany
+  imageName: toy-service
+  tlsVerify: "true"
 
 triggers:
   create: true
