fix(pipelines): ensure Tekton hub tasks run with fsGroup

--- a/charts/ci-pipelines/templates/pipelinerun-example.yaml
+++ b/charts/ci-pipelines/templates/pipelinerun-example.yaml
@@ -6,6 +6,9 @@ metadata:
   annotations:
     pipelinesascode.tekton.dev/on-target-branch: main
 spec:
+  podTemplate:
+    securityContext:
+      fsGroup: 65532
   pipelineRef:
     name: {{ .Values.pipeline.name }}
   params:
