--- a/charts/ci-pipelines/templates/triggers.yaml
+++ b/charts/ci-pipelines/templates/triggers.yaml
@@ -29,6 +29,9 @@ spec:
         generateName: {{ .Values.pipeline.name }}-
         namespace: openshift-pipelines
       spec:
+        podTemplate:
+          securityContext:
+            fsGroup: 65532
         pipelineRef:
           name: {{ .Values.pipeline.name }}
         params:
