fix(pipelines): align fsGroup with namespace range

--- a/charts/ci-pipelines/templates/pipelinerun-example.yaml
+++ b/charts/ci-pipelines/templates/pipelinerun-example.yaml
@@ -9,7 +9,7 @@ spec:
   taskRunTemplate:
     podTemplate:
       securityContext:
-        fsGroup: 65532
+        fsGroup: {{ .Values.pipeline.fsGroup }}
   pipelineRef:
     name: {{ .Values.pipeline.name }}
   params:
