--- a/charts/ci-pipelines/templates/triggers.yaml
+++ b/charts/ci-pipelines/templates/triggers.yaml
@@ -32,7 +32,7 @@ spec:
         taskRunTemplate:
           podTemplate:
             securityContext:
-              fsGroup: 65532
+              fsGroup: {{ .Values.pipeline.fsGroup }}
         pipelineRef:
           name: {{ .Values.pipeline.name }}
         params:
