--- a/charts/ci-pipelines/templates/sa-pipeline.yaml
+++ b/charts/ci-pipelines/templates/sa-pipeline.yaml
@@ -31,3 +31,17 @@ roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
   name: system:openshift:scc:pipelines-scc
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: RoleBinding
+metadata:
+  name: pipeline-privileged-scc
+  namespace: openshift-pipelines
+subjects:
+  - kind: ServiceAccount
+    name: pipeline
+    namespace: openshift-pipelines
+roleRef:
+  apiGroup: rbac.authorization.k8s.io
+  kind: ClusterRole
+  name: system:openshift:scc:privileged
