--- a/charts/image-updater/templates/sa-rbac.yaml
+++ b/charts/image-updater/templates/sa-rbac.yaml
@@ -5,24 +5,26 @@ metadata:
   namespace: {{ .Values.argoNamespace }}
 ---
 apiVersion: rbac.authorization.k8s.io/v1
-kind: Role
+kind: ClusterRole
 metadata:
   name: argocd-image-updater
-  namespace: {{ .Values.argoNamespace }}
 rules:
   - apiGroups: ["argoproj.io"]
     resources: ["applications"]
     verbs: ["get", "list", "watch", "update", "patch"]
+  - apiGroups: [""]
+    resources: ["secrets"]
+    verbs: ["get"]
 ---
 apiVersion: rbac.authorization.k8s.io/v1
-kind: RoleBinding
+kind: ClusterRoleBinding
 metadata:
   name: argocd-image-updater
-  namespace: {{ .Values.argoNamespace }}
 subjects:
   - kind: ServiceAccount
     name: argocd-image-updater
+    namespace: {{ .Values.argoNamespace }}
 roleRef:
-  kind: Role
+  kind: ClusterRole
   apiGroup: rbac.authorization.k8s.io
   name: argocd-image-updater
