fix(umbrella): adopt newest-build update strategy

--- a/charts/bitiq-umbrella/templates/app-bitiq-sample-app.yaml
+++ b/charts/bitiq-umbrella/templates/app-bitiq-sample-app.yaml
@@ -6,7 +6,7 @@ metadata:
   annotations:
     # Tell Image Updater what image to track and how to write back to Helm values
     argocd-image-updater.argoproj.io/image-list: app={{ .Values.sampleAppImageRepo }}
-    argocd-image-updater.argoproj.io/app.update-strategy: latest
+    argocd-image-updater.argoproj.io/app.update-strategy: newest-build
     argocd-image-updater.argoproj.io/app.allow-tags: 'regexp:^[0-9a-f]{7,40}$'
     argocd-image-updater.argoproj.io/app.helm.image-name: image.repository
     argocd-image-updater.argoproj.io/app.helm.image-tag: image.tag
