fix(umbrella): pin image updater platform to amd64

--- a/charts/bitiq-umbrella/templates/app-bitiq-sample-app.yaml
+++ b/charts/bitiq-umbrella/templates/app-bitiq-sample-app.yaml
@@ -7,6 +7,7 @@ metadata:
     # Tell Image Updater what image to track and how to write back to Helm values
     argocd-image-updater.argoproj.io/image-list: app={{ .Values.sampleAppImageRepo }}
     argocd-image-updater.argoproj.io/app.update-strategy: newest-build
+    argocd-image-updater.argoproj.io/app.platforms: linux/amd64
     argocd-image-updater.argoproj.io/app.helm.image-name: image.repository
     argocd-image-updater.argoproj.io/app.helm.image-tag: image.tag
     argocd-image-updater.argoproj.io/write-back-method: git
