--- a/charts/bitiq-umbrella/templates/app-bitiq-sample-app.yaml
+++ b/charts/bitiq-umbrella/templates/app-bitiq-sample-app.yaml
@@ -14,6 +14,7 @@ metadata:
     argocd-image-updater.argoproj.io/write-back-target: helmvalues:/charts/bitiq-sample-app/values-{{ .Values.env }}.yaml
     argocd-image-updater.argoproj.io/git-branch: {{ .Values.targetRevision }}
     argocd-image-updater.argoproj.io/dry-run: "false"
+    argocd-image-updater.argoproj.io/interval: 1m
 spec:
   project: default
   source:
