--- a/charts/ci-pipelines/templates/triggers.yaml
+++ b/charts/ci-pipelines/templates/triggers.yaml
@@ -20,8 +20,6 @@ spec:
   params:
     - name: git-repo-url
     - name: git-revision
-    - name: image-tag
-      default: latest
   resourcetemplates:
     - apiVersion: tekton.dev/v1
       kind: PipelineRun
@@ -40,8 +38,6 @@ spec:
             value: $(tt.params.git-repo-url)
           - name: git-revision
             value: $(tt.params.git-revision)
-          - name: imageTag
-            value: $(tt.params.image-tag)
         workspaces:
           - name: shared-workspace
             volumeClaimTemplate:
@@ -63,8 +59,6 @@ spec:
       value: $(body.repository.clone_url)
     - name: git-revision
       value: $(body.ref)
-    - name: image-tag
-      value: $(extensions.image_tag)
 
 ---
 apiVersion: triggers.tekton.dev/v1beta1
@@ -86,25 +80,7 @@ spec:
                 secretKey: secretToken
             - name: eventTypes
               value: ["push","pull_request"]
-        - ref:
-            name: "cel"
-          params:
-            - name: overlays
-              value:
-                - key: extensions.image_tag
-                  expression: >-
-                    (
-                      'after' in body && body.after != '' ?
-                      body.after :
-                      (
-                        'pull_request' in body &&
-                        'head' in body.pull_request &&
-                        'sha' in body.pull_request.head &&
-                        body.pull_request.head.sha != '' ?
-                        body.pull_request.head.sha :
-                        'latest'
-                      )
-                    )
+        # No image tag is passed via triggers; the Pipeline computes v<semver>-commit.<shortSHA>
       bindings:
         - ref: {{ .Values.pipeline.name }}-binding
       template:
