--- a/charts/bitiq-sample-app/values-sno.yaml
+++ b/charts/bitiq-sample-app/values-sno.yaml
@@ -1,1 +1,6 @@
 baseDomain: apps.sno.example
+
+# Override image per env to ensure deterministic tag shape
+image:
+  repository: quay.io/paulcapestany/toy-service
+  tag: v0.2.24-commit.b4f00ee
