--- a/charts/bitiq-umbrella/Chart.yaml
+++ b/charts/bitiq-umbrella/Chart.yaml
@@ -3,4 +3,4 @@ name: bitiq-umbrella
 description: App-of-Apps to deploy platform components + a sample app for an ENV
 type: application
 version: 0.1.0
-appVersion: "1.0.0"
+appVersion: "toy-service-v0.2.24-commit.b4f00ee"
