chore(helm): codify env overlay precedence with ignoreMissingValueFiles
- Umbrella sample app includes values-<env>-local.yaml in helm valueFiles
- helm-unittest verifies env layering and ignoreMissingValueFiles (set env=sno)

Refs: MIGR-005

--- a/charts/bitiq-umbrella/templates/app-bitiq-sample-app.yaml
+++ b/charts/bitiq-umbrella/templates/app-bitiq-sample-app.yaml
@@ -26,6 +26,7 @@ spec:
       valueFiles:
         - values-common.yaml
         - values-{{ .Values.env }}.yaml
+        - values-{{ .Values.env }}-local.yaml
       ignoreMissingValueFiles: true
       parameters:
         - name: baseDomain
