chore(naming): enforce env-aware namespace and app name patterns
- ApplicationSet templates label umbrella apps with bitiq.io/env
- Child Argo Applications include env suffixes, env labels, and managed namespace manifest
- Docs/scripts reflect env-aware names (ci-pipelines-, image-updater-)
- helm-unittest suites assert new naming/labeling for umbrella components

Refs: MIGR-007

--- a/charts/argocd-apps/templates/applicationset-umbrella.yaml
+++ b/charts/argocd-apps/templates/applicationset-umbrella.yaml
@@ -19,6 +19,10 @@ spec:
   template:
     metadata:
       name: 'bitiq-umbrella-{{ "{{ .env }}" }}'
+      labels:
+        bitiq.io/env: '{{ "{{ .env }}" }}'
+        app.kubernetes.io/name: bitiq-umbrella
+        app.kubernetes.io/managed-by: argocd
     spec:
       project: default
       source:
