--- a/charts/bitiq-sample-app/tests/deployment_test.yaml
+++ b/charts/bitiq-sample-app/tests/deployment_test.yaml
@@ -9,16 +9,18 @@ release:
 assertions:
   - it: uses repository + tag from values
     set:
-      image:
-        repository: quay.io/example/sample
-        tag: v1.2.3-commit.abc1234
+      backend:
+        image:
+          repository: quay.io/example/sample
+          tag: v1.2.3-commit.abc1234
     asserts:
       - equal:
           path: spec.template.spec.containers[0].image
           value: quay.io/example/sample:v1.2.3-commit.abc1234
   - it: propagates health path into readiness probe
     set:
-      healthPath: /ping
+      backend:
+        healthPath: /ping
     asserts:
       - equal:
           path: spec.template.spec.containers[0].readinessProbe.httpGet.path
