--- a/charts/bitiq-sample-app/values-common.yaml
+++ b/charts/bitiq-sample-app/values-common.yaml
@@ -1,27 +1,46 @@
-replicaCount: 1
-
-image:
-  repository: ghcr.io/traefik/whoami
-  tag: "v1.10.2"
-  pullPolicy: IfNotPresent
-
-service:
-  port: 8080
-  type: ClusterIP
-
-# Will be set per-env; used to build Route host
 baseDomain: ""
-hostPrefix: "svc-api"
 
-healthPath: "/"
+backend:
+  replicaCount: 1
+  hostPrefix: "svc-api"
+  healthPath: "/"
+  image:
+    repository: quay.io/paulcapestany/toy-service
+    tag: "v0.0.0-commit.0000000"
+    pullPolicy: IfNotPresent
+  service:
+    port: 8080
+    type: ClusterIP
+  resources:
+    limits:
+      cpu: 250m
+      memory: 256Mi
+    requests:
+      cpu: 100m
+      memory: 128Mi
+  nodeSelector: {}
+  tolerations: []
+  affinity: {}
 
-resources:
-  limits:
-    cpu: 250m
-    memory: 256Mi
-  requests:
-    cpu: 100m
-    memory: 128Mi
-nodeSelector: {}
-tolerations: []
-affinity: {}
+frontend:
+  enabled: true
+  replicaCount: 1
+  hostPrefix: "svc-web"
+  healthPath: "/"
+  image:
+    repository: quay.io/paulcapestany/toy-web
+    tag: "v0.0.0-commit.0000000"
+    pullPolicy: IfNotPresent
+  service:
+    port: 8080
+    type: ClusterIP
+  resources:
+    limits:
+      cpu: 250m
+      memory: 256Mi
+    requests:
+      cpu: 100m
+      memory: 128Mi
+  nodeSelector: {}
+  tolerations: []
+  affinity: {}
