--- a/charts/bitiq-sample-app/values-local.yaml
+++ b/charts/bitiq-sample-app/values-local.yaml
@@ -1,5 +1,12 @@
 baseDomain: apps-crc.testing
-healthPath: "/healthz"
-image:
-  repository: quay.io/paulcapestany/toy-service
-  tag: v0.2.24-commit.b4f00ee
+
+backend:
+  healthPath: "/healthz"
+  image:
+    repository: quay.io/paulcapestany/toy-service
+    tag: v0.2.24-commit.b4f00ee
+
+frontend:
+  image:
+    repository: quay.io/paulcapestany/toy-web
+    tag: v0.1.0-commit.1a2b3c4
