--- a/charts/bitiq-umbrella/values-common.yaml
+++ b/charts/bitiq-umbrella/values-common.yaml
@@ -8,6 +8,8 @@ pipelinesNamespace: openshift-pipelines
 repoUrl: https://github.com/bitiq-io/gitops.git
 targetRevision: main
 
-# Sample app image repo (Image Updater watches this)
+# Sample app images (Image Updater watches these)
 # Use Quay for easier public tag discovery in local e2e
-sampleAppImageRepo: quay.io/paulcapestany/toy-service
+sampleAppImages:
+  backend: quay.io/paulcapestany/toy-service
+  frontend: quay.io/paulcapestany/toy-web
