--- a/charts/bitiq-umbrella/values.yaml
+++ b/charts/bitiq-umbrella/values.yaml
@@ -10,4 +10,6 @@ pipelinesNamespace: openshift-pipelines
 repoUrl: https://github.com/bitiq-io/gitops.git
 targetRevision: main
 
-sampleAppImageRepo: quay.io/paulcapestany/toy-service
+sampleAppImages:
+  backend: quay.io/paulcapestany/toy-service
+  frontend: quay.io/paulcapestany/toy-web
